--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <header></header>
     <main>
       <div class="news-wrap"></div>
+      <button class="more-btn">Більше новин</button>
     </main>
     <script src="./index.js"></script>
   </body>
