--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,24 @@
     />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="container">
+        <nav class="header-nav">
+          <ul class="header-list">
+            <li class="header-item" data-value="general">Загальне</li>
+            <li class="header-item" data-value="entertainment">Розваги</li>
+            <li class="header-item" data-value="sports">Спорт</li>
+            <li class="header-item" data-value="science">Наука</li>
+            <li class="header-item" data-value="technology">Технології</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
-      <div class="news-wrap"></div>
-      <button class="more-btn">Більше новин</button>
+      <div class="container">
+        <div class="news-wrap"></div>
+        <button class="more-btn">Більше новин</button>
+      </div>
     </main>
     <script src="./index.js"></script>
   </body>
