--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
     </header>
     <main>
       <div class="container">
+        <div class="hero">
+          <h1 class="hero-header">Головні новини</h1>
+        </div>
         <div class="news-wrap"></div>
         <button class="more-btn">Більше новин</button>
       </div>
